// Original file: src/accounts_and_balances.proto


export interface GrpcCancelReservationRequest {
  'payerPositionAccountId'?: (string);
  'hubJokeAccountId'?: (string);
  'transferAmount'?: (string);
  'currencyCode'?: (string);
  'transferId'?: (string);
}

export interface GrpcCancelReservationRequest__Output {
  'payerPositionAccountId'?: (string);
  'hubJokeAccountId'?: (string);
  'transferAmount'?: (string);
  'currencyCode'?: (string);
  'transferId'?: (string);
}
