// Original file: src/accounts_and_balances.proto


export interface GrpcHighLevelResponse {
  'requestType'?: (number);
  'requestId'?: (string);
  'success'?: (boolean);
  'errorMessage'?: (string);
}

export interface GrpcHighLevelResponse__Output {
  'requestType'?: (number);
  'requestId'?: (string);
  'success'?: (boolean);
  'errorMessage'?: (string);
}
