// Original file: src/accounts_and_balances.proto


export interface GrpcHighLevelStreamResponse {
  'requestType'?: (number);
  'requestId'?: (string);
  'success'?: (boolean);
  'errorMessage'?: (string);
}

export interface GrpcHighLevelStreamResponse__Output {
  'requestType'?: (number);
  'requestId'?: (string);
  'success'?: (boolean);
  'errorMessage'?: (string);
}
