// Original file: proto_files/builtin_ledger.proto

import type { GrpcBuiltinLedger_HighLevelRequest as _aandb_builtinledger_GrpcBuiltinLedger_HighLevelRequest, GrpcBuiltinLedger_HighLevelRequest__Output as _aandb_builtinledger_GrpcBuiltinLedger_HighLevelRequest__Output } from '../../aandb/builtinledger/GrpcBuiltinLedger_HighLevelRequest';

export interface GrpcBuiltinLedger_HighLevelRequestList {
  'requestArray'?: (_aandb_builtinledger_GrpcBuiltinLedger_HighLevelRequest)[];
}

export interface GrpcBuiltinLedger_HighLevelRequestList__Output {
  'requestArray': (_aandb_builtinledger_GrpcBuiltinLedger_HighLevelRequest__Output)[];
}
