// Original file: proto_files/builtin_ledger.proto


export interface GrpcBuiltinLedger_HighLevelResponse {
  'requestType'?: (number);
  'requestId'?: (string);
  'success'?: (boolean);
  'errorMessage'?: (string);
}

export interface GrpcBuiltinLedger_HighLevelResponse__Output {
  'requestType'?: (number);
  'requestId'?: (string);
  'success'?: (boolean);
  'errorMessage'?: (string);
}
