// Original file: proto_files/builtin_ledger.proto

import type { GrpcBuiltinLedger_Id as _aandb_builtinledger_GrpcBuiltinLedger_Id, GrpcBuiltinLedger_Id__Output as _aandb_builtinledger_GrpcBuiltinLedger_Id__Output } from '../../aandb/builtinledger/GrpcBuiltinLedger_Id';

export interface GrpcBuiltinLedger_IdList {
  'idList'?: (_aandb_builtinledger_GrpcBuiltinLedger_Id)[];
}

export interface GrpcBuiltinLedger_IdList__Output {
  'idList': (_aandb_builtinledger_GrpcBuiltinLedger_Id__Output)[];
}
